Fixed: Issue where the spinner on the counts-to-charge question were not being colorized as it is for other charge-related questions.
Fixed: Made the various "showXxx" check boxes be reset when the Reset All button is pressed.
# 1.00.15 (46802) Dec 3, 2010
12/3/10 Deploying to dev for testing and review, this is a release candidate for the first production version with the game.
Fixed: On level 4, use atoms that are always heavier than lithium for non-schematic problems, instead of equal to or heavier.
# 1.00.14 (46798) Dec 3, 2010
12/3/10 Deploying to dev for testing and review - this is a release candidate for the first version with the game.
Fixed: On level 4, use heavier atoms for non-schematic problems.
Fixed nucleon layout for an isotope of lithium (was difficult to discern in game mode)
Internal changes
# 1.00.13 (46632) Nov 29, 2010
11/29/10 Deploying to dev for test and review
Internationalized strings for all recently added problem types.
Added code to prevent having the same problem type twice in a row.
Added new problem types where the charge is entered into the symbol representation.
Changed the problems that contain spinners such that the "Check" button is enabled right away.  This allows the user to guess a value of 0.
Removed problem types with symbol on left side from level 3.
Fixed: Issue where charge was not updated when electrons were removed from outer shell.
Fixed: Issue where charge and mass indicators were not reading correctly until something was added to the atom.
# 1.00.12 (46503) Nov 23, 2010
11/23/10 Deploying to dev for interviews on new game problems.
Added problem types with particle counts on left and single questions on right.
Added problem types with schematic of atom on left and single questions on right.
Turned on animation of unstable nuclei by default.  Still able to turn off in developer dialog.
# 1.00.11 (46233) Nov 16, 2010
11/16/10 Deploying with mods to game behavior