@@ -1,3 +1,4 @@
+Changed the tracking of the best time to be on a per-level basis instead of having one best time that encompassed all levels.
 Fixed: Issue where the spinner on the counts-to-charge question were not being colorized as it is for other charge-related questions.
 Fixed: Made the various "showXxx" check boxes be reset when the Reset All button is pressed.
 # 1.00.15 (46802) Dec 3, 2010
